# llama-code

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/llama-code-cli/: Cargo.toml
crates/llama-code-cli/src/: main.rs
crates/llama-code-core/: Cargo.toml
crates/llama-code-core/src/: agent.rs  config.rs  context.rs  errors.rs  events.rs  history.rs  lib.rs  model.rs  permissions.rs  router.rs  session.rs
crates/llama-code-format/: Cargo.toml
crates/llama-code-format/src/: constrained.rs  generic.rs  lib.rs  llama3.rs  templates.rs
crates/llama-code-tools/: Cargo.toml
crates/llama-code-tools/src/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  git.rs  grep.rs  lib.rs  ls.rs  registry.rs  think.rs
crates/llama-code-tui/: Cargo.toml
crates/llama-code-tui/src/: app.rs  input.rs  lib.rs  render.rs  spinner.rs  theme.rs
docs/: DEMO.md
scripts/: setup.sh
