[package]
name = "llama-code"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The first coding agent built natively for open-source models"

[[bin]]
name = "llama-code"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dirs.workspace = true

llama-code-core = { path = "../llama-code-core" }
llama-code-tui = { path = "../llama-code-tui" }
llama-code-tools = { path = "../llama-code-tools" }
llama-code-format = { path = "../llama-code-format" }
