[package]
name = "llama-code-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core agent loop and state machine for Llama Code"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
regex.workspace = true

llama-code-format = { path = "../llama-code-format" }
llama-code-tools = { path = "../llama-code-tools" }

[dev-dependencies]
tempfile.workspace = true
