[package]
name = "llama-code-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Built-in tool implementations for Llama Code"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
similar.workspace = true
walkdir.workspace = true
ignore.workspace = true
regex.workspace = true
bytesize.workspace = true
chrono.workspace = true

llama-code-format = { path = "../llama-code-format" }

[dev-dependencies]
tempfile.workspace = true
